# NexVenusCL

./: CMakeLists.txt  LICENSE  License.txt  NOTICE  README.md  overview.md
cmake_config/: NVSHMEMConfig.cmake.in  NVSHMEMEnv.cmake
examples/: CMakeLists.txt  p2p_multi.cu  p2p_one_to_one.cu  p2p_utils.cuh  run_tests.sh
licenses/: LICENSE.nvshmem.txt
src/: CMakeLists.txt  p2pcomm.cpp
src/host/init/: cudawrap.cpp  init.cu
src/host/transport/: transport.cpp
src/host/util/: debug.cpp  env_vars.cpp  util.cpp
src/include/bootstrap_host_transport/: env_defs_internal.h
src/include/device/: nvshmem_device_macros.h
src/include/device_host_transport/: nvshmem_common_ibgda.h
src/include/host/: p2pcomm_api.h
src/include/host/env/: env_defs.h
src/include/internal/host/: debug.h  error_codes_internal.h  nvshmem_internal.h  util.h
src/include/internal/host_transport/: cudawrap.h  nvshmemi_transport_defines.h  transport.h
src/include/non_abi/: nvshmem_build_options.h.in  nvshmem_version.h.in  nvshmemx_error.h
src/include/non_abi/device/pt-to-pt/: configs.cuh  exception.cuh  ibgda_device.cuh  utils.cuh  utils_device.cuh
src/modules/transport/: CMakeLists.txt.in
src/modules/transport/common/: CMakeLists.txt.in  env_defs.h  mlx5_ifc.h  mlx5_prm.h  transport_common.cpp  transport_common.h  transport_ib_common.cpp  transport_ib_common.h  transport_mlx5_common.cpp  transport_mlx5_common.h
src/modules/transport/ibgda/: CMakeLists.txt.in  ibgda.cpp
